# oz_fastapi_when2meet

./: pyproject.toml  temp.py  test.sh  test_coverage.py  test_pytest.py
.github/workflows/: ci.yaml
app/: __init__.py
app/apis/v1/: meeting_router.py  participant_date_router.py  participant_router.py
app/configs/: base_config.py  tortoise_config.py
app/dtos/: create_participant_response.py  frozen_config.py  get_meeting_response.py  update_meeting_request.py
app/queries/meeting/: create_meeting.edgeql  create_meeting_async_edgeql.py  get_meeting_by_url_code.edgeql  get_meeting_by_url_code_async_edgeql.py  models.py  update_meeting_location.edgeql  update_meeting_start_end.edgeql  update_meeting_start_end_async_edgeql.py
app/queries/participant/: bulk_create_participant_date.edgeql  bulk_create_participant_date_async_edgeql.py  create_participant.edgeql  create_participant_async_edgeql.py  delete_participant.edgeql  delete_participant_async_edgeql.py
app/queries/participant_date/: star.edgeql  star_async_edgeql.py  turn_off_participant_date.edgeql  turn_off_participant_date_async_edgeql.py  turn_on_participant_date.edgeql  turn_on_participant_date_async_edgeql.py  unstar.edgeql  unstar_async_edgeql.py
app/services/: meeting_service_edgedb.py  participant_date_service_edgedb.py  participant_service_edgedb.py  participant_service_mysql.py
app/tests/apis/v1/: test_best_dates_edgedb.py  test_meeting_router_edgedb.py  test_meeting_router_mysql.py  test_participant_date_router_edgedb.py  test_participant_router_edgedb.py
app/tortoise_models/: meeting.py  participant.py  participant_date.py
app/utils/: base62.py  squids.py
dbschema/: default.esdl
dbschema/migrations/: 00001-m1hzq2s.edgeql  00002-m1jjrzi.edgeql  00003-m16fcy2.edgeql  00004-m1kpuhd.edgeql  00005-m17itvh.edgeql  00006-m1l7qih.edgeql  00007-m125gxd.edgeql  00008-m1wtxlr.edgeql
migrations/models/: 1_20250822133638_update.py  2_20250822165358_update.py
