[project]
name = "when2meet"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "black==24.10.0",
    "ruff==0.8.2",
]

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py313"